# Epita-S5-42SH

./: .gitignore  README.md  meson.build  shell.nix  src - Raccourci.lnk
src/: 42sh.c  lexer_main_test.c  main.c  meson.build
src/ast/: ast.c  ast.h
src/builtins/: Makefile~  builtins.h  cd.c  echo  echo.c  exit  exit.c  meson.build
src/execution/: exec.c  exec.h  exec_main.c  meson.build
src/io/: cstream_file.c  cstream_readline.c  cstream_string.c
src/lexer/: lexer.c  lexer.h  lexer_basics.c  lexer_fill_current_tok.c  lexer_main.c  lexer_peek_pop.c  lexer_special_token.c  meson.build  my_string.c  my_string.h  token.c  token.h
src/parser/: meson.build  parse.c  parse.h  parse_command.c  parse_compound_list.c  parse_main.c  parse_rule_if.c  parse_rule_while_until.c  parser.c  parser.h  parser_rule_if.c
src/utils/: alloc.h  error.c  error.h  meson.build  vec.c  vec.h
